--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,41 @@
-#Titulo{
-	text-align: right
+html{
+	background-color:darkseagreen;
+}
+header{
+	background-color:darkgreen;
+  }
+  #Titulo{
+	margin: auto;
+	text-align: center;
+	font-family: 'Pacifico', cursive;
+  }
+  
+ 
+nav{
+ 
+  background-color:#17181C;
+  text-align: center;
+}
 
+nav ul{
+   list-style: none;
+   display: inline-block;
+   
+}
+
+nav ul li{
+	float: left;
+	margin-top: 20px;
+}
+
+nav ul li a {
+	color: white;
+	font-weight: bold;
+	text-decoration: none;
+	font-size: 20px;
+	padding: 15px;
+}
+
+nav ul li a:hover{
+  background-color: #929fb3;
 }
