--- a/css/estilo.css
+++ b/css/estilo.css
@@ -49,15 +49,28 @@ nav ul li a:hover{
 }
 
 section{
-	background-color: #005005;
+	
 	margin-top: 10px;
+	width: 420px;
+	height: 300px;
+	
 	margin-left: 200px;
-	margin-right: 400px;
+	margin-right: 20px;
+	
+
+	float: left;
+	
 }
 p.Parrafo{
 	background-color: cornsilk;
 	 border-width: 10px;
 	 border-color: #005005;
-	border-style: solid;
+	border-style: solid;	
+}
+#imagen{
+	margin-top: 10px;
 	
-	}
+	background-color: cornsilk;
+	
+	
+}
