--- a/css/estilo.css
+++ b/css/estilo.css
@@ -59,11 +59,9 @@ section{
 	float: left;
 	
 }
-p.Parrafo{
+#Cuento{
 	background-color: cornsilk;
-	 border-width: 10px;
-	 border-color: #005005;
-	border-style: solid;	
+		
 }
 #imagen{
 	margin-top: 2%;
@@ -71,10 +69,4 @@ p.Parrafo{
 	 border-color: white;
 	border-style: solid;
 		
-}
-p.Dialogos{
-	background-color: cornsilk;
-	 border-width: 10px;
-	 border-color: #005005;
-	border-style: solid;	
 }
