Fix error de codigo

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -57,14 +57,14 @@ section{
 	width: 65%;
 	height:  auto;
 	float: left;
-	background-color: white;
+	background-color:whitesmoke;
 	text-align: center;
 	
 }
 
 	
     	
-	text-align: justify;
+	
    
 }
 #imagen{
