--- a/css/estilo.css
+++ b/css/estilo.css
@@ -59,14 +59,20 @@ section{
 	float: left;
 	background-color:whitesmoke;
 	text-align: center;
-	
+	border-width: 10px;
+	border-color: #005005;
+	border-style: solid ;
 }
 
 	
-    	
+.Parrafo{
+	font-family: cursive;
+}    	
+.Comentario{
 	
-   
 }
+   
+
 #imagen{
 	margin-top: 2%;
 	border-width: 10px;
