--- a/css/estilo.css
+++ b/css/estilo.css
@@ -76,9 +76,18 @@ section{
 
 #imagen{
 	margin-top: 2%;
-	margin-bottom: 2%;
+	margin-bottom: 3%;
 	border-width: 10px;
 	 border-color: white;
 	border-style: solid;
 		
+}
+#referencias{
+	margin-top: 2%;
+	background-color: #2e7d32;
+	margin-bottom: 3%;
+	border-width: 10px;
+	 border-color:#005005;
+	border-style: solid;
+	font-style:italic;
 }
