--- a/css/estilo.css
+++ b/css/estilo.css
@@ -42,8 +42,9 @@ nav ul li{
 nav ul li a {
 	color: white;
 	font-weight: bold;
+	text-align: center;
 	text-decoration: none;
-	font-size: 20px;
+	font-size: 25px;
 	padding: 1%;
 }
 
@@ -105,4 +106,12 @@ h3{
 	 border-color:#005005;
 	border-style: solid;
 	
+}
+#Reseña{
+	background-color: ghostwhite;
+	margin-bottom: 3%;
+	border-width: 10px;
+	 border-color:#005005;
+	border-style: solid;
+	text-align: left;
 }
