--- a/css/estilo.css
+++ b/css/estilo.css
@@ -122,3 +122,10 @@ h3{
 	 border-color:#005005;
 	border-style: solid;
 }
+#Glosario{
+	text-align: left;
+	background-color: ghostwhite;
+	border-width: 10px;
+	 border-color:#005005;
+	border-style: solid;
+}
