--- a/css/estilo.css
+++ b/css/estilo.css
@@ -108,12 +108,14 @@ h3{
 	
 }
 #Reseña{
+	font-family: cursive;
 	background-color: ghostwhite;
 	margin-bottom: 3%;
 	border-width: 10px;
 	 border-color:#005005;
 	border-style: solid;
-	text-align: left;
+	text-align: justify;
+
 }
 #disqus_thread{
 	
